Add support for multiple clients
